# agentic-ai-projects

./: README.md
Query-to-Insight-Agent/: AGENT_FLOW.md  datatechcon.db  inspect_db.py  pyproject.toml  setup_db.py
Query-to-Insight-Agent/agents/analyze_agent/: agent.py  description.txt  instructions.txt
Query-to-Insight-Agent/agents/datafetch_agent/: agent.py  description.txt  instructions.txt
Query-to-Insight-Agent/agents/intent/: agent.py  (+2 more)
Query-to-Insight-Agent/tools/: datatechcon.db  file_writer_tool.py
version_2_sequential_db_agent/tools/: file_writer_tool.py
version_3_market_competitor_analysis/: IMPLEMENTATION_SUMMARY.md  ISSUE_RESOLVED.md  PARALLELAGENT_FIXED.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  SYSTEM_READY.md  agent_flow_diagram.md  main.py  pyproject.toml
version_3_market_competitor_analysis/agents/competitor_analyzer/: __init__.py  agent.py  description.txt  instructions.txt
version_3_market_competitor_analysis/agents/competitor_identifier/: __init__.py  agent.py  description.txt  instructions.txt
version_3_market_competitor_analysis/agents/report_generator/: __init__.py  agent.py  description.txt  instructions.txt
version_3_market_competitor_analysis/agents/root_report_builder/: agent.py  description.txt
version_3_market_competitor_analysis/agents/swot_analyzer/: __init__.py  agent.py  description.txt  instructions.txt
version_3_market_competitor_analysis/tools/: file_writer_tool.py
version_3_market_competitor_analysis/utils/: file_loader.py
version_interview_preparation_agent/: pyproject.toml
(+22 files in other folders)
